tests/NormalTests/paczka1/small_fuzzy/40882609.err
Error in line 4: A773 S431 44,1
Error in line 2: gERQcxB2vwF A7 10,5
